--- a/app/assets/stylesheets/custom.css.scss
+++ b/app/assets/stylesheets/custom.css.scss
@@ -39,6 +39,11 @@ $navbar-default-bg: black;
   background-color: black;
 }
 
+.listing {
+  list-style: none;
+  padding-left: 0;
+}
+
 footer {
   margin-top: 45px;
   padding-top: 5px;
