--- a/app/views/layouts/_navigation.html.erb
+++ b/app/views/layouts/_navigation.html.erb
@@ -24,32 +24,34 @@
 
         <li><%= link_to "Articles", articles_path %></li>
 
-        <li><a href="#">Link</a></li>
+        <li><%= link_to "Users", users_path %></li>
 
-        <li class="dropdown">
+        <% if logged_in? %>
 
-          <a href="#" class="dropdown-toggle" data-toggle="dropdown" role="button" aria-haspopup="true" aria-expanded="false">Actions <span class="caret"></span></a>
-
-          <ul class="dropdown-menu">
-
-            <li><%= link_to "New Article", new_article_path %></li>
-            
-            <li><a href="#">Another action</a></li>
-            
-            <li><a href="#">Something else here</a></li>
-            
-            <li role="separator" class="divider"></li>
-            
-            <li><a href="#">Separated link</a></li>
-            
-            <li role="separator" class="divider"></li>
-            
-            <li><a href="#">One more separated link</a></li>
-        
-          </ul>
-
-        </li>
-
+          <li class="dropdown">
+  
+            <a href="#" class="dropdown-toggle" data-toggle="dropdown" role="button" aria-haspopup="true" aria-expanded="false">Actions <span class="caret"></span></a>
+  
+            <ul class="dropdown-menu">
+  
+              <li><%= link_to "New Article", new_article_path %></li>
+              
+              <li><a href="#">Another action</a></li>
+              
+              <li><a href="#">Something else here</a></li>
+              
+              <li role="separator" class="divider"></li>
+              
+              <li><a href="#">Separated link</a></li>
+              
+              <li role="separator" class="divider"></li>
+              
+              <li><a href="#">One more separated link</a></li>
+          
+            </ul>
+  
+          </li>
+        <% end %>
       </ul>
 
       <form class="navbar-form navbar-left" role="search">
@@ -65,29 +67,32 @@
       </form>
 
       <ul class="nav navbar-nav navbar-right">
-      
-        <li><a href="#">Link</a></li>
-        
-        <li class="dropdown">
-        
-          <a href="#" class="dropdown-toggle" data-toggle="dropdown" role="button" aria-haspopup="true" aria-expanded="false">Dropdown <span class="caret"></span></a>
-        
-          <ul class="dropdown-menu">
-        
-            <li><a href="#">Action</a></li>
+        <% if logged_in? %>
+          <li><%= link_to 'Log out', logout_path, method: :delete %></li>
           
-            <li><a href="#">Another action</a></li>
+          <li class="dropdown">
           
-            <li><a href="#">Something else here</a></li>
+            <a href="#" class="dropdown-toggle" data-toggle="dropdown" role="button" aria-haspopup="true" aria-expanded="false">Your Profile <span class="caret"></span></a>
           
-            <li role="separator" class="divider"></li>
+            <ul class="dropdown-menu">
           
-            <li><a href="#">Separated link</a></li>
-        
-          </ul>
-
-        </li>
-
+              <li><%= link_to "Edit your profile", edit_user_path(current_user) %></li>
+            
+              <li><%= link_to "View your profile", user_path(current_user) %></li>
+            
+              <li><a href="#">Something else here</a></li>
+            
+              <li role="separator" class="divider"></li>
+            
+              <li><a href="#">Separated link</a></li>
+          
+            </ul>
+  
+          </li>
+        <% else %>
+          <li><%= link_to 'Log in', login_path %></li>
+          <li><%= link_to 'Sign up', signup_path %></li>
+        <% end %>
       </ul>
 
     </div><!-- /.navbar-collapse -->
